<resources>
    <string name="app_name">Staccato</string>
    <string name="app_name_dev">Staccato-DEV</string>
    <string name="all_empty"> </string>
    <string name="all_update">수정</string>
    <string name="all_delete">삭제</string>
    <string name="all_save">저장</string>
    <string name="all_cancel">취소</string>
    <string name="all_confirm">확인</string>
    <string name="all_photo">사진</string>
    <string name="all_share">공유</string>
    <string name="all_photo_number">(%s/%s)</string>
    <string name="all_photo_attach">사진 첨부하기</string>
    <string name="all_visited_at">날짜 및 시간</string>
    <string name="all_please_select_visited_at">날짜 및 시간을 선택해 주세요</string>
    <string name="all_please_select_color">색상을 선택해 주세요</string>
    <string name="all_date_dots_format">%d. %02d. %02d</string>
    <string name="all_date_kr_format">%s년 %s월 %s일</string>
    <string name="all_date_time_am_pm_kr_format">%s년 %02d월 %02d일 %s %s시</string>
    <string name="all_default_not_supported">아직 지원하지 않는 기능이에요.</string>
    <string name="all_required_mark">*</string>
    <string name="all_setting">설정</string>
    <string name="all_retry">재시도</string>
    <string name="all_am">오전</string>
    <string name="all_pm">오후</string>
    <string name="all_location_permission_denial">위치 권한을 거부 하셨습니다.</string>
    <string name="all_webview_failure">웹 브라우저를 띄울 수 없습니다.</string>
    <string name="all_clipboard_copy">클립보드에 복사했어요!</string>
    <string name="all_staccato_main_character">스타카토 메인 캐릭터</string>
    <string name="all_delete_image">사진 삭제 버튼</string>
    <string name="all_photo_attach_icon_description">사진 첨부란</string>
    <string name="all_category_thumbnail_photo_description">카테고리 썸네일 사진</string>
    <string name="all_waring">경고</string>
    <string name="all_period_dot_different_year">%d. %02d. %02d - %d. %02d. %02d</string>
    <string name="all_period_dot_same_year">%d. %02d. %02d - %02d. %02d</string>
    <string name="all_invitation_notification_indicator_description">카테고리 초대 알림 존재 표시</string>
    <string name="all_member_profile_image_description">사용자 프로필 사진</string>
    <string name="all_staccato_creation_btn_description">스타카토 기록하기로 이동</string>
    <string name="all_original_photo">원본 사진</string>
    <string name="notification_permission_title">알림 설정</string>
    <string name="notification_permission_rationale">알림을 활성화하면 아래 소식을 빠르게 받아볼 수 있어요.</string>
    <string name="notification_permission_rationale_bullet">▪ 새로운 코멘트가 달렸을 때\n▪ 누군가 나를 카테고리에 초대했을 때\n▪ 공유 카테고리에 새로운 참여자가 생겼을 때\n▪ 공유 카테고리에 새로운 스타카토가 올라왔을 때</string>
    <string name="notification_permission_denial">알림 권한을 거부 하셨습니다.</string>
    <string name="channel_name_invitation">초대 알림</string>
    <string name="channel_name_category">공동 카테고리 알림</string>
    <string name="channel_name_comment">댓글 알림</string>
    <string name="main_end">버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="main_mypage_btn_description">마이 페이지로 이동</string>
    <string name="main_staccato_creation_btn_description">스타카토 기록하기로 이동</string>
    <string name="timeline_nickname_memories">%s의 추억들</string>
    <string name="timeline_empty">텅 비었어요!</string>
    <string name="timeline_make_category">스타카토를 담을 카테고리를 만들어보세요.</string>
    <string name="timeline_no_filtered_category">아직 해당하는 카테고리가 없네요.</string>
    <string name="timeline_add_category">추가</string>
    <string name="timeline_sort">정렬</string>
    <string name="timeline_filter_with_term">기간 있는 카테고리만</string>
    <string name="timeline_filter_without_term">기간 없는 카테고리만</string>
    <string name="timeline_filter_all">모든 카테고리</string>
    <string name="timeline_create_category">카테고리 생성하기</string>
    <string name="timeline_category_creation_btn_description">카테고리 만들기로 이동</string>
    <string name="timeline_expand_to_half">바텀시트를 전체 화면에서 하프 화면으로 전환</string>
    <string name="sort_updated_order">최근 수정순</string>
    <string name="sort_newest_order">최신순</string>
    <string name="sort_oldest_order">과거순</string>
    <string name="timeline_category_icon_description">카테고리 아이콘</string>
    <string name="category_period">%s년 %s월 %s일 ~ %s년 %s월 %s일</string>
    <string name="category_mates">함께하는 사람들</string>
    <string name="category_staccatos">스타카토</string>
    <string name="category_delete_complete">카테고리가 삭제되었습니다.</string>
    <string name="category_staccato_empty">카테고리가 비어있어요.\n스타카토를 찍어볼까요?</string>
    <string name="category_error_staccato_record_impossible">스타카토를 기록할 수 없어요.</string>
    <string name="category_invite_description">카테고리 초대 버튼</string>
    <string name="category_staccato_creation">기록하기</string>
    <string name="category_staccato_refresh_btn_description">스타카토 새로고침</string>
    <string name="category_exit_title">정말 나가시겠습니까?</string>
    <string name="category_exit_complete">카테고리에서 나갔어요.</string>
    <string name="category_delete_error">지금은 카테고리를 삭제할 수 없어요.</string>
    <string name="category_empty_error">지금은 카테고리를 불러올 수 없어요.</string>
    <string name="mates_profile_image_description">함께 한 사람 프로필 이미지</string>
    <string name="staccatos_calendar_icon_description">달력 아이콘</string>
    <string name="staccatos_thumbnail_photo_description">스타카토 썸네일 사진</string>
    <string name="category_creation_title">카테고리 제목</string>
    <string name="category_creation_title_hint">제목을 입력해 주세요</string>
    <string name="category_creation_description">카테고리 소개</string>
    <string name="category_creation_description_hint">소개를 입력해 주세요</string>
    <string name="category_creation_color">마커 색상</string>
    <string name="category_creation_color_hint">지도 위에서 보여질 마커의 색을 선택해주세요.</string>
    <string name="category_creation_period_setting">기간 설정</string>
    <string name="category_creation_period_hint">기간을 선택해 주세요</string>
    <string name="category_creation_selected_period">%s ~ %s</string>
    <string name="category_creation_period_description">여행처럼 시작일과 종료일을 설정할 수 있어요.</string>
    <string name="category_creation_toolbar_title">카테고리 만들기</string>
    <string name="category_creation_toolbar_subtitle">스타카토를 담을 카테고리를 만들어 보세요!</string>
    <string name="category_creation_share_title">카테고리 공유</string>
    <string name="category_creation_share_hint">친구들을 초대해 함께 카테고리를 채워보세요.</string>
    <string name="category_creation_share_warning">한 번 설정하면 변경할 수 없어요</string>
    <string name="category_update_toolbar_title">카테고리 수정하기</string>
    <string name="category_update_toolbar_subtitle">스타카토를 담을 카테고리를 수정해 보세요!</string>
    <string name="staccato_at_history">%s에 방문했어요</string>
    <string name="staccato_logs">코멘트</string>
    <string name="staccato_enter_log">코멘트 입력하기</string>
    <string name="staccato_empty_comments">코멘트를 남겨보세요!</string>
    <string name="staccato_how_was_your_feeling">이때의 기분은 어땠나요?</string>
    <string name="staccato_comment_has_been_deleted">코멘트를 삭제했어요!</string>
    <string name="staccato_loading_failure">스타카토를 불러올 수 없어요!</string>
    <string name="staccato_feeling_selection_description">스타카토 기분</string>
    <string name="staccato_feeling_selection_comment_send_btn_description">코멘트 전송</string>
    <string name="staccato_share_message">%s님의 스타카토를 확인해보세요!</string>
    <string name="staccato_share">스타카토 공유하기</string>
    <string name="staccato_error_comment_copy">코멘트를 복사할 수 없어요.</string>
    <string name="staccato_my_comment_profile_image_description">나의 프로필 이미지</string>
    <string name="staccato_others_comment_profile_image_description">친구 프로필 이미지</string>
    <string name="viewpager_photo_description">스타카토 사진</string>
    <string name="staccato_creation_photo_drag_hint">*꾹 눌러 사진 순서를 바꿔 보세요</string>
    <string name="staccato_creation_staccato_title">스타카토 제목</string>
    <string name="staccato_creation_staccato_name_hint">어떤 순간이었나요? 제목을 입력해 주세요</string>
    <string name="staccato_creation_place">장소</string>
    <string name="staccato_creation_place_search">"장소명, 주소, 위치로 검색해 보세요"</string>
    <string name="staccato_creation_load_current_location">현재 위치의 주소 불러오기</string>
    <string name="staccato_creation_empty_address">"장소를 선택하면 상세 주소가 나타나요"</string>
    <string name="staccato_creation_address">상세 주소</string>
    <string name="staccato_creation_category_selection">카테고리 선택</string>
    <string name="staccato_creation_loading_visitedAt">날짜와 시간을 불러오고 있어요</string>
    <string name="staccato_creation_no_category_in_this_date">선택하신 날짜에는 카테고리가 없어요</string>
    <string name="staccato_creation_no_category">스타카토를 남길 수 있는 카테고리가 없어요</string>
    <string name="staccato_creation_toolbar_subtitle">기억하고 싶은 순간을 남겨 보세요!</string>
    <string name="staccato_creation_toolbar_title">스타카토 기록하기</string>
    <string name="staccato_creation_not_found_address">주소를 찾지 못했습니다</string>
    <string name="attached_photo_staccato_photo_description">스타카토 사진</string>
    <string name="all_large_photo_warning">10MB보다\n작은 사진을\n올려주세요</string>
    <string name="staccato_update_toolbar_subtitle">기억하고 싶은 순간을 수정해 보세요!</string>
    <string name="staccato_update_toolbar_title">스타카토 수정하기</string>
    <string name="login_start">시작하기</string>
    <string name="login_nickname_hint">닉네임을 입력해 주세요</string>
    <string name="login_nickname_valid_message">사용 가능한 닉네임이에요!</string>
    <string name="login_nickname_error_message_format">닉네임은 한글, 영어, 숫자, 띄어쓰기,\n마침표(.), 밑줄(_)만 사용할 수 있어요.</string>
    <string name="login_nickname_error_message_blank_first">닉네임은 공백으로 시작할 수 없어요.</string>
    <string name="login_nickname_error_message_length">%d~%d 사이의 길이로 입력해 주세요.</string>
    <string name="login_recovery_click_here_if_need_recovery"><u>이전 기록을 불러오려면 여기를 눌러주세요</u></string>
    <string name="login_staccato_logo_description">스타카토 로고</string>
    <string name="recovery_title">이전 기록을 불러올게요</string>
    <string name="recovery_subtitle">고유 코드를 입력해 주세요</string>
    <string name="recovery_code_hint">ex) bt2hnhd4-07kght-0pp2ln</string>
    <string name="recovery_load">불러오기</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_uuid">복구 코드 복사하기</string>
    <string name="mypage_invitation_management">카테고리 초대 관리</string>
    <string name="mypage_privacy_policy">개인정보처리방침</string>
    <string name="mypage_feedback">피드백으로 혼내주기</string>
    <string name="mypage_instagram">스타카토 인스타그램</string>
    <string name="mypage_app_version">앱 버전 2.1.0</string>
    <string name="mypage_error_fetching_member_profile">프로필 정보를 가져올 수 없습니다.</string>
    <string name="mypage_error_changing_profile_image">프로필 이미지 변경에 실패했습니다.</string>
    <string name="mypage_error_not_found_browser">"피드백 페이지를 열 수 있는 브라우저가 없어요"</string>
    <string name="mypage_error_can_not_open_instagram_page">"인스타그램을 열 수 없어요"</string>
    <string name="mypage_user_profile_image_description">사용자 프로필 이미지</string>
    <string name="mypage_update_profile_image_description">프로필 이미지 수정</string>
    <string name="mypage_navigate_to_instagram_btn_description">인스타그램으로 이동</string>
    <string name="mypage_menu_navigation_icon_description">메뉴 이동 버튼</string>
    <string name="camera_preview_image_description">촬영된 이미지 미리 보기</string>
    <string name="photo_attach_title">사진을 등록해 주세요</string>
    <string name="photo_attach_camera">카메라 열기</string>
    <string name="photo_attach_album">앨범에서 가져오기</string>
    <string name="photo_require_camera_permission">카메라 권한을 허용해 주세요.</string>
    <string name="photo_require_photo_album_permission">사진 접근 권한을 허용해 주세요.</string>
    <string name="snack_bar_camera_error">카메라 실행 중 에러가 발생했습니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="snack_bar_gallery_error">사진을 불러올 수 없습니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="snack_bar_no_camera">실행할 수 있는 카메라 앱이 없습니다.</string>
    <string name="snack_bar_move_to_setting">설정하기</string>
    <string name="delete_title">정말 삭제할까요?</string>
    <string name="delete_description">삭제를 누르면 복구할 수 없어요!</string>
    <string name="comment_copy">복사</string>
    <string name="comment_delete">삭제</string>
    <string name="location_dialog_title">위치 권한 설정</string>
    <string name="location_dialog_permission_rationale">위치 권한을 활성화하면 아래 기능들을 사용할 수 있어요. \n ▪️현 위치를 조회할 수 있어요 \n ▪️현 위치를 기반으로 빠르게 스타카토를\n &#160;생성할 수 있어요 \n\n더 나은 서비스 경험을 원하신다면 위치 권한을 허용해 주세요!</string>
</resources>