<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.on.staccato.presentation.common.location.LocationDialogHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/DialogBackgroundStyle">

        <TextView
            android:id="@+id/tv_location_dialog_title"
            style="@style/SubTitleStyle"
            android:text="@string/location_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_location_dialog_description"
            style="@style/DialogDescriptionStyle"
            android:text="@string/location_dialog_permission_rationale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location_dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_location_dialog_cancel"
            style="@style/ButtonStyle.Cancel"
            android:layout_marginEnd="6dp"
            android:onClick="@{() -> handler.onCancelClicked()}"
            app:layout_constraintEnd_toStartOf="@id/btn_location_dialog_confirm"
            app:layout_constraintTop_toBottomOf="@id/tv_location_dialog_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_location_dialog_confirm"
            style="@style/ButtonStyle.Confirm.Narrow"
            android:onClick="@{() -> handler.onCancelClicked()}"
            android:text="@string/all_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location_dialog_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
