<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.on.staccato.presentation.recovery.viewmodel.RecoveryViewModel" />

        <variable
            name="handler"
            type="com.on.staccato.presentation.recovery.RecoveryHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_recovery"
            style="@style/TitleToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="24dp"
            android:paddingTop="72dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_recovery">

            <TextView
                android:id="@+id/tv_recovery_title"
                style="@style/Typography.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/recovery_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_recovery_subtitle"
                style="@style/Typography.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/recovery_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recovery_title" />

            <EditText
                android:id="@+id/et_recovery_code"
                style="@style/EditTextStyle"
                android:layout_marginTop="40dp"
                android:hint="@string/recovery_code_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="36"
                android:maxLines="1"
                android:text="@={viewModel.recoveryCode}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recovery_subtitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_staccato"
                style="@style/ButtonStyle.Recovery"
                android:onClick="@{() -> handler.onRecoveryClicked()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                bind:recoveryButtonEnabled="@{viewModel.recoveryCode}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
