<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="categoryCandidates"
            type="com.on.staccato.domain.model.CategoryCandidates" />

        <variable
            name="visitedAtItems"
            type="java.util.List&lt;java.time.LocalDate&gt;" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_sheet_16dp"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_select_category_title"
            style="@style/SubTitleStyle"
            android:text="@string/staccato_creation_no_category_in_this_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category_candidates_is_empty"
            style="@style/Typography.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:text="@string/staccato_creation_no_category"
            app:layout_constraintBottom_toTopOf="@id/btn_category_visited_at_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_category_title"
            bind:isCategoryCandidatesEmpty="@{categoryCandidates}" />

        <NumberPicker
            android:id="@+id/picker_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0.5dp"
            android:theme="@style/ThemeOverlay.NumberPicker"
            app:layout_constraintBottom_toTopOf="@id/picker_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_category_title" />

        <TextView
            android:id="@+id/tv_select_visited_at_title"
            style="@style/SubTitleStyle"
            android:text="@string/all_please_select_visited_at"
            app:layout_constraintBottom_toTopOf="@id/picker_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picker_category" />

        <NumberPicker
            android:id="@+id/picker_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="36dp"
            android:layout_marginEnd="30dp"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0.5dp"
            android:theme="@style/ThemeOverlay.NumberPicker"
            app:layout_constraintBottom_toTopOf="@id/btn_category_visited_at_confirm"
            app:layout_constraintEnd_toStartOf="@id/picker_month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picker_category" />

        <TextView
            android:id="@+id/tv_year"
            style="@style/Typography.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="년"
            app:layout_constraintBottom_toBottomOf="@id/picker_year"
            app:layout_constraintStart_toEndOf="@id/picker_year"
            app:layout_constraintTop_toTopOf="@id/picker_year" />

        <NumberPicker
            android:id="@+id/picker_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="36dp"
            android:layout_marginEnd="30dp"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0.5dp"
            android:theme="@style/ThemeOverlay.NumberPicker"
            app:layout_constraintBottom_toTopOf="@id/btn_category_visited_at_confirm"
            app:layout_constraintEnd_toStartOf="@id/picker_day"
            app:layout_constraintStart_toEndOf="@id/picker_year"
            app:layout_constraintTop_toBottomOf="@id/picker_category" />

        <TextView
            android:id="@+id/tv_month"
            style="@style/Typography.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="월"
            app:layout_constraintBottom_toBottomOf="@id/picker_month"
            app:layout_constraintStart_toEndOf="@id/picker_month"
            app:layout_constraintTop_toTopOf="@id/picker_month" />

        <NumberPicker
            android:id="@+id/picker_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="36dp"
            android:layout_marginEnd="30dp"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0.5dp"
            android:theme="@style/ThemeOverlay.NumberPicker"
            app:layout_constraintBottom_toTopOf="@id/btn_category_visited_at_confirm"
            app:layout_constraintEnd_toStartOf="@id/picker_hours"
            app:layout_constraintStart_toEndOf="@id/picker_month"
            app:layout_constraintTop_toBottomOf="@id/picker_category" />

        <TextView
            android:id="@+id/tv_day"
            style="@style/Typography.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일"
            app:layout_constraintBottom_toBottomOf="@id/picker_day"
            app:layout_constraintStart_toEndOf="@id/picker_day"
            app:layout_constraintTop_toTopOf="@id/picker_day" />

        <NumberPicker
            android:id="@+id/picker_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="36dp"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0.5dp"
            android:theme="@style/ThemeOverlay.NumberPicker"
            app:layout_constraintBottom_toTopOf="@id/btn_category_visited_at_confirm"
            app:layout_constraintEnd_toEndOf="@id/tv_hour"
            app:layout_constraintStart_toEndOf="@id/picker_day"
            app:layout_constraintTop_toBottomOf="@id/picker_category" />

        <TextView
            android:id="@+id/tv_hour"
            style="@style/Typography.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="시"
            app:layout_constraintBottom_toBottomOf="@id/picker_hours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/picker_hours"
            app:layout_constraintTop_toTopOf="@id/picker_hours" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_category_visited_at_confirm"
            style="@style/ButtonStyle.Save.Active"
            android:text="@string/all_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
